Add: JWT Verification
